Version 2.38
---------
 [Francisco Javier]
 * virtnbdbackup: reuse existing sftp connections during backup. (#283)

 [Michael Ablassmeier]
 * virtnbdmap: replaying changes may fail with "[Errno 22] Invalid argument":
 the NBD device sometimes needs some time to settle, wait until it is seekable
 to the end of the block list instead of failing.

Version 2.37
---------
 * Add missing nbdkit and python plugin to docker container image. (#282)

Version 2.36
---------
 * virtnbdbackup: add `--pause` option: Suspend and resume virtual machine
 while starting backup job. This can be useful for virtual machines where
 freezing file systems using the qemu guest agent is not possible.

Version 2.35
---------
 * virtnbdrestore: fix restore issue in case virtual machine is using
 volume based disk configuration: the restore process attempted to identify
 the volumes which do not exist anymore. Adjust virtual machine config and
 reset the volume base setting to a file based notation. (#280)

Version 2.34
---------
 * virtnbdbackup: show hint about virtual machine config adjustment
 possibility in case raw devices are attached.
 * virtnbdrestore: do not show warning if no data-file setting is found in
 qcow json file.
 * Add RHEL10 RPM build to github workflow
 * Do not make vm6.tests fail if /tmp/datafile.raw is missing.

Version 2.33
---------
 * virtnbdrestore: Add support for data-file setting in qcow images:

 As with versions (>= v10.10.0), libvirt supports the qcow image data-file
 setting. This allows to create metadata QCOW Images for RAW disk images or
 direct attached LVM/ZFS/RBD volumes.

 Bitmaps are then stored within the metadata QCOW image, allowing to create
 incremental backups for these disks, too.

 During restore, the QCOW image must be created with the correct data-file
 setting and the virtual machine configuration must be adopted. The utility
 will now adjust paths accordingly if -c option is specified.
