@@ -7,6 +7,14 @@ Version 2.38
  * virtnbdmap: replaying changes may fail with "[Errno 22] Invalid argument":
  the NBD device sometimes needs some time to settle, wait until it is seekable
  to the end of the block list instead of failing.
+ * virtnbdbackup: During full backup, all old checkpoints are removed.
+ Sometimes there might be situations where bitmaps are not existent anymore.
+ Now, during full backup, checkpoint consistency is validated prior to
+ removal, and checkpoints tied to  non-existent bitmaps will be removed with
+ VIR_DOMAIN_CHECKPOINT_DELETE_METADATA_ONLY flags enabled, to allow flawless
+ full backups. The utility will issue WARNINGS in this case.
+
+ See discussion (#285)
 
 Version 2.37
 ---------
